--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ table td{
 /*закрепляем заголовок*/
 .section-one__thead{
 	position: sticky;
-	top: 32px;
+	top:20px;
 	
 }
 
@@ -114,7 +114,7 @@ textarea{
 	display: flex;
 	justify-content: center;
 	position: sticky;
-	padding-bottom: 10px;
+	/*padding-bottom: 20px;*/
 	top: 0;
 	/*background-color:lightsteelblue;*/
 	background-color:darkslateblue;
@@ -191,6 +191,11 @@ button:hover{/* при наведении*/
 		font-size: 14px;
 
 	}
+}
+
+.section-one__thead {
+	top: 15px;
+
 }
 
 
