--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/*---------------------------------стиль страницы------------------*/
+/*---------------------------------стиль страницы-----------------*/
 
 /*основная секция*/
 .section-one{
