исправление отступов для "выберите строку"
исправлен отступ при медиа менее 725px

--- a/css/styles.css
+++ b/css/styles.css
@@ -224,6 +224,10 @@ button:hover{/* при наведении*/
         padding-top: 10px;
 	}
 
+	.section-one__greeting p {
+	padding-bottom: 15px;
+	padding-top: 5px;
+	}
 }
 /*---------------------------------------------------медиа запросы конец--------------------------------------------------*/
 
